[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/EnemyAI.gd" type="Script" id=1]
[ext_resource path="res://scripts/EnemyAI_Move.gd" type="Script" id=2]

[node name="EnemyAI" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyAI_Move" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="FindTargetTimer" type="Timer" parent="EnemyAI_Move"]
wait_time = 0.5
autostart = true

[node name="EnemyAI_Attack" type="Node2D" parent="."]

[node name="DrawTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="PlayerDetectionTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="EyeLabel" type="Label" parent="."]
margin_left = -36.4162
margin_top = -84.9891
margin_right = 29.5838
margin_bottom = -70.9891
text = "Eye:True"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabel" type="Label" parent="."]
margin_left = -35.9308
margin_top = -51.0737
margin_right = 36.0692
margin_bottom = -37.0737
text = "Attack:True"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DangerousLabel" type="Label" parent="."]
margin_left = -50.4354
margin_top = -67.7088
margin_right = 49.5646
margin_bottom = -53.7088
text = "Dangerous:True"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveStateLabel" type="Label" parent="."]
margin_left = -40.2596
margin_top = -107.535
margin_right = 40.7404
margin_bottom = -93.5354
text = "State : patrol"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="EnemyAI_Move/FindTargetTimer" to="EnemyAI_Move" method="_on_FindTargetTimer_timeout"]
[connection signal="timeout" from="DrawTimer" to="." method="_on_DrawTimer_timeout"]
[connection signal="timeout" from="PlayerDetectionTimer" to="." method="_on_PlayerDetectionTimer_timeout"]
